--- a/Assets/Prefabs/UI/HeroView/HeroView.uxml
+++ b/Assets/Prefabs/UI/HeroView/HeroView.uxml
@@ -1,8 +1,7 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/HeroStatsStyleUI.uss?fileID=7433441132597879392&amp;guid=d738f5978ad7d4f65a88e96e5485a6b0&amp;type=3#HeroStatsStyleUI" />
-    <ui:VisualElement style="flex-grow: 1; top: 10%;">
-        <ui:Label text="Hero Stats:" name="current_hero_level" class="header" style="justify-content: flex-start; align-items: auto; align-content: auto; align-self: center; font-size: 28px; top: 0%;" />
-        <ui:ListView name="stat_labels_root" selection-type="None" focusable="false" />
-        <ui:Button text="Level up price:" name="level_up_button" />
+    <Style src="project://database/Assets/Prefabs/UI/HeroView/HeroStatsStyleUI.uss?fileID=7433441132597879392&amp;guid=d738f5978ad7d4f65a88e96e5485a6b0&amp;type=3#HeroStatsStyleUI" />
+    <ui:VisualElement name="VisualElement" style="top: 10%; bottom: -10%; height: 80%;">
+        <ui:Label text="Hero Stats:" name="current_hero_level" class="header" style="justify-content: flex-start; align-items: auto; align-content: auto; align-self: center; font-size: 28px; top: 0%; bottom: 80%;" />
+        <ui:Button text="Level up price:" name="level_up_button" style="top: auto; bottom: 0%; align-content: flex-end; -unity-text-align: lower-center; left: 10%; right: 10%; position: absolute;" />
     </ui:VisualElement>
 </ui:UXML>
